# Solo

./: .gitignore  CMakeLists.txt  README.md  README.zh.md
JC1_SDK_SRC_ARM/interface/: AGR_JC1_SDK_API.h  SKP_Silk_SDK_API.h
JC1_SDK_SRC_ARM/src/libBWE/: AGR_BWE_LPC_synthesizer.c  AGR_BWE_SDK_API.c  AGR_BWE_arch.h  AGR_BWE_bits.c  AGR_BWE_bits.h  AGR_BWE_decode_frame_FIX.c  AGR_BWE_defines.h  AGR_BWE_encode_frame_FIX.c  AGR_BWE_find_HB_LPC_FIX.c  AGR_BWE_fixed_generic.h  AGR_BWE_init.c  AGR_BWE_main_FIX.h  AGR_BWE_qmf.c  AGR_BWE_quant_highband.c  AGR_BWE_structs.h  AGR_BWE_tables_highband_coeff.c  AGR_BWE_tables_highband_coeff.h  AGR_BWE_tables_qmf.c  AGR_BWE_tables_qmf.h
JC1_SDK_SRC_ARM/src/libSATECodec/: SKP_Silk_A2NLSF.c  SKP_Silk_A2NLSF_arm.S  SKP_Silk_AsmHelper.h  SKP_Silk_AsmPreproc.h  SKP_Silk_CNG.c  SKP_Silk_HP_variable_cutoff_FIX.c  SKP_Silk_Inlines.h  SKP_Silk_LPC_inv_pred_gain.c  SKP_Silk_LPC_synthesis_filter.c  SKP_Silk_LPC_synthesis_order16.c  SKP_Silk_LP_variable_cutoff.c  SKP_Silk_LTP_analysis_filter_FIX.c  SKP_Silk_LTP_scale_ctrl_FIX.c  SKP_Silk_MA.c  SKP_Silk_MA_arm.S  SKP_Silk_NLSF2A_stable.c  SKP_Silk_NLSF_MSVQ_encode_FIX.c  SKP_Silk_NLSF_VQ_rate_distortion_FIX.c  SKP_Silk_NLSF_VQ_sum_error_FIX.c  SKP_Silk_NLSF_VQ_sum_error_FIX_arm.S  SKP_Silk_NLSF_VQ_weights_laroia.c  SKP_Silk_NLSF_stabilize.c  SKP_Silk_NSQ.c  SKP_Silk_NSQ_del_dec.c  SKP_Silk_PLC.c  (+101 more)
JC1_SDK_SRC_ARM/test/: dec_main.c  enc_main.c
JC1_SDK_SRC_FLP/interface/: SKP_Silk_SDK_API.h  SKP_Silk_control.h  SKP_Silk_errors.h  SKP_Silk_typedef.h
JC1_SDK_SRC_FLP/test/: dec_main.c  enc_main.c
(+140 files in other folders)
